--- a/css/styles.css
+++ b/css/styles.css
@@ -721,7 +721,7 @@ label {
 	overflow: hidden;
 }
 
-.input-checkbox:checked .span-checkbox {
+.form-checkbox:checked + .label-checkbox > .span-checkbox {
 	border: none;
 	fill: var(--light-cloud);
 }
