--- a/css/styles.css
+++ b/css/styles.css
@@ -749,3 +749,8 @@ label {
 	margin-left: auto;
 	margin-right: auto;
 }
+
+.form-button:hover,
+.form-button:focus {
+	background-color: var(--pressed-state-ocean);
+}
