--- a/css/styles.css
+++ b/css/styles.css
@@ -72,10 +72,6 @@ img {
 	margin-bottom: 72px;
 }
 
-/* label {
-	display: flex;
-	flex-direction: column;
-} */
 /* хедер */
 
 .page-header {
@@ -545,11 +541,11 @@ img {
 
 /* MODAL */
 
-/* .is-hidden {
+.is-hidden {
 	opacity: 0;
 	pointer-events: none;
 	visibility: hidden;
-} */
+}
 
 .backdrop {
 	position: fixed;
