--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ img {
 }
 
 .container {
-	max-width: 1128px;
+	max-width: 1158px;
 	padding-left: 15px;
 	padding-right: 15px;
 	margin-left: auto;
@@ -496,7 +496,7 @@ img {
 .input {
 	background-color: transparent;
 	border: 1px solid var(--white-background);
-	color: #ffffff;;
+	color: #ffffff;
 	border-radius: 4px;
 	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 	width: 264px;
@@ -509,7 +509,7 @@ img {
 }
 
 .input::placeholder {
-	color: #ffffff;;
+	color: #ffffff;
 }
 
 .input-style {
@@ -532,6 +532,12 @@ img {
 	background-color: var(--primary-brand-iris);
 	border: none;
 	border-radius: 4px;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-button:hover,
+.footer-button:focus {
+	background-color: var(--pressed-state-ocean);
 }
 
 .icon-color {
@@ -591,11 +597,11 @@ img {
 }
 
 .input-hero:focus + .svg-hero {
-	fill: #4D5AE5;
+	fill: #4d5ae5;
 }
 
 .input-hero:focus {
-	border-color: #4D5AE5;
+	border-color: #4d5ae5;
 }
 
 .form-comment {
@@ -620,7 +626,7 @@ img {
 }
 
 .textarea:focus {
-	border-color: #4D5AE5;;
+	border-color: #4d5ae5;
 }
 
 .label-input {
@@ -636,6 +642,7 @@ img {
 	position: absolute;
 	top: 50%;
 	left: 16px;
+	fill: var(--dark-navy-blue);
 	transform: translateY(-50%);
 	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -730,6 +737,7 @@ img {
 
 .form-link {
 	color: var(--primary-brand-iris);
+	text-decoration: underline;
 }
 
 .form-button {
