--- a/css/styles.css
+++ b/css/styles.css
@@ -547,11 +547,11 @@ img {
 
 /* MODAL */
 
-/* .is-hidden {
+.is-hidden {
 	opacity: 0;
 	pointer-events: none;
 	visibility: hidden;
-} */
+}
 
 .backdrop {
 	position: fixed;
