--- a/css/styles.css
+++ b/css/styles.css
@@ -406,7 +406,7 @@ img {
 	transform: translateY(0);
 }
 
-/* футер */
+/* FOOTER */
 .footer-text {
 	color: var(--light-cloud);
 	line-height: 1.5;
